text and style yo

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ disqusShortname = "nisjs"
 theme = "aglaus"
 license = "MIT"
 
-Copyright = "[NisJS](http://nisjs.com) - All code under [MIT Licence](http://opensource.org/licenses/MIT)"
+Copyright = "[NišJS](http://nisjs.com) - All code under [MIT Licence](http://opensource.org/licenses/MIT)"
 
 
 [params]
